[gd_scene load_steps=2 format=3 uid="uid://bkvpnu177k56g"]

[ext_resource type="Script" uid="uid://03qr5cn8q0qg" path="res://Scripts/room_zone_area_2d.gd" id="1_gjm3b"]

[node name="RoomZoneArea2D" type="Area2D"]
collision_mask = 2
script = ExtResource("1_gjm3b")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
